# teste

./: .gitignore  pyproject.toml
project1_teste/: db.sqlite3  manage.py
project1_teste/blog/: admin.py  models.py  urls.py  views.py
project1_teste/blog/migrations/: 0001_initial.py
project1_teste/blog/templates/blog/: base.html  post_detail.html  post_list.html
project1_teste/project1_teste/: asgi.py  settings.py  urls.py  wsgi.py
projeto2_DRF/: db.sqlite3  manage.py
projeto2_DRF/escola/: admin.py  models.py  serializer.py  views.py
projeto2_DRF/escola/migrations/: 0001_initial.py  0002_remove_curso_nome.py  0003_curso_nome.py
projeto2_DRF/projeto2_DRF/: asgi.py  settings.py  urls.py  wsgi.py
